# https-bot

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  docker.bzl  external.bzl  go-mod-bazel.sh  go.mod  go.sum
cmd/https-bot/: BUILD.bazel  dummy_test.go  hn.go  main.go
internal/check/: BUILD.bazel  check.go  dummy_test.go
internal/hnapi/: BUILD.bazel  firebase.go  item.go  item_test.go  reply.go  second.go
similarity/: BUILD.bazel  doc.go  similarity.go  similarity_test.go
