load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "similarity",
    srcs = [
        "doc.go",
        "similarity.go",
    ],
    importpath = "github.com/fishy/https-bot/similarity",
    visibility = ["//visibility:public"],
)

go_test(
    name = "similarity_test",
    size = "small",
    srcs = ["similarity_test.go"],
    deps = [":similarity"],
)
