load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "https-bot_lib",
    srcs = [
        "hn.go",
        "main.go",
    ],
    importpath = "github.com/fishy/https-bot/cmd/https-bot",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/check",
        "//internal/hnapi",
        "@com_github_reddit_baseplate_go//log",
        "@com_github_reddit_baseplate_go//runtimebp",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_binary(
    name = "https-bot",
    embed = [":https-bot_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/reddit/baseplate.go/log.Version": "{STABLE_SHORT_GIT_COMMIT}",
    },
)

go_test(
    name = "https-bot_test",
    size = "small",
    srcs = ["dummy_test.go"],
    embed = [":https-bot_lib"],
)

# Docker related rules

load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("//:docker.bzl", "register_go_config_setting", "select_go_base")

register_go_config_setting()

go_image(
    name = "go_image",
    base = select_go_base(),
    embed = [":https-bot_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/reddit/baseplate.go/log.Version": "{STABLE_SHORT_GIT_COMMIT}",
    },
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push",
    format = "Docker",
    image = ":go_image",
    registry = "localhost:5000",
    repository = "https-bot",
    tag = "latest",
)
